# blackholio-agent

./: HOW_TO_TRAIN.md  README.md  blackholio-agent-spawn-detection-fixes.md  blackholio-python-client-object-attribute-fixes.md  blackholio-python-client-protocol-fixes-needed.md  pyproject.toml  pytest.ini  spacetimedb-python-sdk-object-serialization-fixes.md
.github/workflows/: tests.yml
docs/: API.md  DOCKER_SETUP.md  INFERENCE_SYSTEM.md  PROGRESS.md  SPACETIMEDB_CONNECTION_FIX.md  SPACETIMEDB_ML_GUIDE.md  TASK_COMPLETION_AGENT_3.md  TASK_COMPLETION_AGENT_7.md  TASK_COMPLETION_AGENT_9.md  TESTING.md  TRAINING_GUIDE.md  TRAINING_PIPELINE.md
examples/: advanced_training.py  basic_usage.py  multi_agent_demo.py  test_connection.py  test_inference.py  test_model.py
examples/notebooks/: training_visualization.ipynb
scripts/: run_agent.py  run_tests.py  test_coverage.py  train_agent.py
scripts/configs/: full_train_selfplay.yaml  quick_train.yaml
src/: __init__.py
src/blackholio_agent/: __init__.py
src/blackholio_agent/environment/: BLACKHOLIO_CUSTOM_WEBSOCKET_LARGE_MESSAGE_FIX.py  BLACKHOLIO_ENHANCED_WEBSOCKET_FIX.py  __init__.py  action_space.py  blackholio_connection_adapter.py  blackholio_connection_v112.py  blackholio_env.py  connection.py  connection_fix.py  connection_minimal.py  data_converter.py  mock_connection.py  mock_connection_fixed.py  mock_connection_improved.py  observation_space.py  protocol_fix.py  reward_calculator.py
src/blackholio_agent/inference/: __init__.py  agent.py  config.py  metrics.py  model_loader.py  rate_limiter.py
(+39 files in other folders)
